fix to welcome template

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 ﻿<!doctype html>
 <html>
 <head>
-    <link href="{{ url_for('static',filename='css/index.css') }}" ref="stylesheet">
+    <link href="{{ url_for('static',filename='css/index.css') }}" rel="stylesheet" type="text/css">
 </head>
 <body>
     <div class="absolute-center">
