Signup page added, forms added + lots of other changes

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -157,3 +157,11 @@
     line-height: 1.428571429;
     border-radius: 15px;
 }
+
+.flash-alert {
+    position: fixed;
+    width: 500px;
+    text-align: center;
+    top: 56px;
+    left: 500px;
+}
