--- a/templates/index.html
+++ b/templates/index.html
@@ -1,127 +1,67 @@
-﻿<!doctype html>
-<html class="no-js" lang="en" dir="ltr">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recycle - Efficient waste management</title>
-    <link href="/static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+﻿{% extends "layout.html" %}
+{% block content %}
 
-    <link href="/static/css/portfolio-item.css" rel="stylesheet">
-    <link rel="stylesheet" href="/static/css/index.css">
-</head>
-<body>
-<!-- Navigation -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <div class="container">
-        <a class="navbar-brand" href="/">Recycle</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
-                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="/">Home
-                        <span class="sr-only">(current)</span>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Services</a>
-                </li>
-                <li class="nav-item">
-                    <a class="btn btn-dark" href="#">Signup</a>
-                </li>
-            </ul>
-        </div>
+<!-- Portfolio Item Heading -->
+<h1 class="my-4">Recycle -
+    <small>efficient management of waste resources</small>
+</h1>
+
+<!-- Portfolio Item Row -->
+<div class="row">
+
+    <div class="col-md-8">
+        <img class="img-fluid" src="/static/img/industrial_waste_1.jp" alt="">
     </div>
-</nav>
 
-<!-- Page Content -->
-<div class="container">
+    <div class="col-md-4">
+        <h3 class="my-3">Vision</h3>
+        <p>We aim to link the waste output of industries and their inputs, so that waste
+            resources of one industry can be used as input to another.
+            <br>
+            This would lead to less wastage of resources
+        </p>
 
-    <!-- Portfolio Item Heading -->
-    <h1 class="my-4">Recycle -
-        <small>efficient management of waste resources</small>
-    </h1>
-
-    <!-- Portfolio Item Row -->
-    <div class="row">
-
-        <div class="col-md-8">
-            <img class="img-fluid" src="/static/img/industrial_waste_1.jp" alt="">
-        </div>
-
-        <div class="col-md-4">
-            <h3 class="my-3">Vision</h3>
-            <p>We aim to link the waste output of industries and their inputs, so that waste
-                resources of one industry can be used as input to another.
-                <br>
-                This would lead to less wastage of resources
-            </p>
-
-            <div class="form-wrap border login-form rounded">
-                <h4>Log in</h4>
-                <form role="form" action="javascript:;" method="post" id="login-form" autocomplete="off">
-                    <div class="form-group">
-                        <label for="email" class="sr-only">Email</label>
-                        <input type="email" name="email" id="email" class="form-control"
-                               placeholder="somebody@example.com">
-                    </div>
-                    <div class="form-group">
-                        <label for="key" class="sr-only">Password</label>
-                        <input type="password" name="key" id="key" class="form-control" placeholder="Password">
-                    </div>
-                    <input type="submit" id="btn-login" class="btn btn-custom btn-lg btn-block" value="Log in">
-                </form>
-                <a href="javascript:;" class="forget" data-toggle="modal" data-target=".forget-modal">Forgot your
-                    password?</a>
-
-            </div>
+        <div class="form-wrap border login-form rounded">
+            <h4>Log in</h4>
+            <form role="form" action="/" method="post" id="login-form" autocomplete="off">
+                {{ form.csrf_token }}
+                <div class="form-group">
+                    <label for="email" class="sr-only">Email</label>
+                    {{ form.email(class_="form-control", placeholder="somebody@example.com") }}
+                </div>
+                <div class="form-group">
+                    <label for="password" class="sr-only">Password</label>
+                    {{ form.password(class_="form-control") }}
+                </div>
+                <input type="submit" id="btn-login" class="btn btn-custom btn-lg btn-block" value="Log in">
+            </form>
+            <a href="javascript:;" class="forget" data-toggle="modal" data-target=".forget-modal">Forgot your
+                password?</a>
 
         </div>
+
     </div>
-    <!-- /.row -->
-
-    <!-- Related Projects Row -->
-    <h3 class="my-4">Steps</h3>
-
-    <div class="stepwizard">
-        <div class="stepwizard-row">
-            <div class="stepwizard-step">
-                <button type="button" class="btn btn-danger btn-circle" disabled="disabled">1</button>
-                <p>Register / Sign in</p>
-            </div>
-            <div class="stepwizard-step">
-                <button type="button" class="btn btn-primary btn-circle" disabled="disabled">2</button>
-                <p>Enter waste produced and input material needed</p>
-            </div>
-            <div class="stepwizard-step">
-                <button type="button" class="btn btn-success btn-circle" disabled="disabled">3</button>
-                <p>Match with similar industries</p>
-            </div>
-        </div>
-    </div>
-    <!-- /.row -->
-
 </div>
-<!-- /.container -->
+<!-- /.row -->
 
-<!-- Footer -->
-<footer class="py-3 bg-dark">
-    <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Recycle 2018</p>
+<!-- Related Projects Row -->
+<h3 class="my-4">Steps</h3>
+
+<div class="stepwizard">
+    <div class="stepwizard-row">
+        <div class="stepwizard-step">
+            <button type="button" class="btn btn-danger btn-circle" disabled="disabled">1</button>
+            <p>Register / Sign in</p>
+        </div>
+        <div class="stepwizard-step">
+            <button type="button" class="btn btn-primary btn-circle" disabled="disabled">2</button>
+            <p>Enter waste produced and input material needed</p>
+        </div>
+        <div class="stepwizard-step">
+            <button type="button" class="btn btn-success btn-circle" disabled="disabled">3</button>
+            <p>Match with similar industries</p>
+        </div>
     </div>
-    <!-- /.container -->
-</footer>
-
-
-</body>
-<!-- Bootstrap core JavaScript -->
-<script src="/static/vendor/jquery/jquery.min.js"></script>
-<script src="/static/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-</html>
+</div>
+<!-- /.row -->
+{% endblock %}
