registration flow complete

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -32,12 +32,12 @@
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Services</a>
-                </li>
+                <!--<li class="nav-item">-->
+                    <!--<a class="nav-link" href="#">About</a>-->
+                <!--</li>-->
+                <!--<li class="nav-item">-->
+                    <!--<a class="nav-link" href="#">Services</a>-->
+                <!--</li>-->
                 <li class="nav-item">
                     <a class="btn btn-dark" href="/signup/">Signup</a>
                 </li>
@@ -81,5 +81,6 @@
 <script src="/static/vendor/jquery/jquery.min.js"></script>
 <script src="/static/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 <script src="/static/js/jquery.multi-select.js"></script>
+<script src="/static/js/jquery.validate.min.js"></script>
 {% block script %}{% endblock %}
 </html>
