--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
                 </div>
                 <input type="submit" id="btn-login" class="btn btn-custom btn-lg btn-block" value="Log in">
             </form>
-            <a href="javascript:;" class="forget" data-toggle="modal" data-target=".forget-modal">Forgot your
+            <a href="javascript:;" class="forget" data-toggle="modal" data-target="#forget-modal">Forgot your
                 password?</a>
 
         </div>
@@ -64,4 +64,129 @@
     </div>
 </div>
 <!-- /.row -->
+
+
+<div class="modal fade" id="forget-modal" role="dialog">
+    <div class="modal-dialog">
+
+        <!-- Modal content-->
+        <div class="modal-content">
+            <form role="form" action="{{ url_for('index.reset_password') }}" method="post" id="password-reset-form"
+                  autocomplete="off">
+                <div class="modal-header">
+                    <h4 class="modal-title">Reset Password</h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    {{ form.csrf_token }}
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        {{ reset_password_form.email(class_="form-control", placeholder="somebody@example.com") }}
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Password</label><small> (Password should have atleast 6 characters)</small>
+                        {{ reset_password_form.password(class_="form-control") }}
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Confirm Password</label>
+                        {{ reset_password_form.confirm(class_="form-control") }}
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <input type="submit" id="btn-login-reset" class="btn btn-custom btn-lg btn-block"
+                           value="Reset Password">
+                </div>
+            </form>
+        </div>
+
+    </div>
+</div>
+
+
 {% endblock %}
+
+
+{% block script %}
+
+<script type="text/javascript">
+    $("document").ready(function () {
+
+        $("#password-reset-form").validate({
+            ignore: [],
+            // Specify validation rules
+            rules: {
+                // The key name on the left side is the name attribute
+                // of an input field. Validation rules are defined
+                // on the right side
+                email: {
+                    required: true,
+                    // Specify that email should be validated
+                    // by the built-in "email" rule
+                    email: true
+                },
+                password: {
+                    required: true,
+                    minlength: 6
+                },
+                confirm: {
+                    required: true,
+                    minlength: 6
+                }
+            },
+            // Specify validation error messages
+            messages: {
+                password: {
+                    required: "Please provide a password",
+                    minlength: "Your password must be at least 6 characters long"
+                },
+                confirm: {
+                    required: "Please provide a password",
+                    minlength: "Your password must be at least 6 characters long"
+                },
+                email: "Please enter a valid email address"
+            },
+            // Make sure the form is submitted to the destination defined
+            // in the "action" attribute of the form when valid
+            submitHandler: function (form) {
+                form.submit();
+            }
+        });
+
+        $("#login-form").validate({
+            ignore: [],
+            // Specify validation rules
+            rules: {
+                // The key name on the left side is the name attribute
+                // of an input field. Validation rules are defined
+                // on the right side
+                email: {
+                    required: true,
+                    // Specify that email should be validated
+                    // by the built-in "email" rule
+                    email: true
+                },
+                password: {
+                    required: true,
+                    minlength: 6
+                }
+            },
+            // Specify validation error messages
+            messages: {
+                password: {
+                    required: "Please provide a password",
+                    minlength: "Your password must be at least 6 characters long"
+                },
+                email: "Please enter a valid email address"
+            },
+            // Make sure the form is submitted to the destination defined
+            // in the "action" attribute of the form when valid
+            submitHandler: function (form) {
+                form.submit();
+            }
+        });
+
+    });
+
+</script>
+{% endblock %}
+
