--- a/templates/signup.html
+++ b/templates/signup.html
@@ -28,27 +28,27 @@
             </div>
             <div class="form-group">
                 <label for="contactPerson">Contact Person</label>
-                {{ form.contact_person(class_="form-control", placeholder="Mr XYZ") }}
+                {{ form.contact_person(class_="form-control") }}
             </div>
 
             <div class="form-group">
                 <label for="wasteGenerated">Waste Generated</label>
                 {{ form.waste_generated(class_="form-control", id="wasteGeneratedMultiSelect") }}
-                <input type="hidden" name="wasteGeneratedList" id="wasteGeneratedList">
+                <input type="hidden" name="waste_generated_list" id="wasteGeneratedList">
             </div>
 
             <div class="form-group">
                 <label for="wasteRequired">Waste Required</label>
                 {{ form.waste_required(class_="form-control", id="wasteRequiredMultiSelect") }}
-                <input type="hidden" name="wasteRequiredList" id="wasteRequiredList">
+                <input type="hidden" name="waste_required_list" id="wasteRequiredList">
             </div>
 
             <div class="form-group">
-                <label for="email">Email</label>
+                <label for="email">Email</label><small> (This will be your username)</small>
                 {{ form.email(class_="form-control", placeholder="somebody@example.com") }}
             </div>
             <div class="form-group">
-                <label for="password">Password</label>
+                <label for="password">Password</label><small> (Password should have atleast 6 characters)</small>
                 {{ form.password(class_="form-control") }}
             </div>
             <input type="submit" id="btn-login" class="btn btn-custom btn-lg btn-block" value="Register">
@@ -149,7 +149,7 @@
             inputValue.val(values);
             modelHead.text(wasteOptionMap[values[0]]);
             quantity.modal("show");
-            quantity.find(".waste_quantity").val(0);
+            quantity.find(".waste_quantity").val(1);
         }
 
         function afterDeselectHandler(values, source) {
@@ -209,7 +209,7 @@
                 },
                 password: {
                     required: true,
-                    minlength: 5
+                    minlength: 6
                 }
             },
             // Specify validation error messages
@@ -222,7 +222,7 @@
                 wasteRequiredList: "Please choose the waste required by the orgranization",
                 password: {
                     required: "Please provide a password",
-                    minlength: "Your password must be at least 5 characters long"
+                    minlength: "Your password must be at least 6 characters long"
                 },
                 email: "Please enter a valid email address"
             },
