edit profile and logout modal added

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -2,9 +2,12 @@
 {% block content %}
 
 <!-- Portfolio Item Heading -->
-<h1 class="my-4">
-    <h1>Hi, {{ current_user.email }}!</h1>
-</h1>
+<div class="dashboard">
+    <h1 class="my-4">
+        Hi, {{ current_user.email }}!
+    </h1>
+</div>
+
 
 <!-- /.row -->
 {% endblock %}
