--- a/templates/layout.html
+++ b/templates/layout.html
@@ -32,17 +32,17 @@
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
-                <!--<li class="nav-item">-->
-                <!--<a class="nav-link" href="#">About</a>-->
-                <!--</li>-->
-                <!--<li class="nav-item">-->
-                <!--<a class="nav-link" href="#">Services</a>-->
-                <!--</li>-->
+                <li class="nav-item active">
+                    {% if current_user.is_authenticated %}
+                    <a class="nav-link" href="{{ url_for('index.edit_profile') }}">Edit Profile</a>
+                    {% endif %}
+                </li>
+
                 <li class="nav-item">
                     {% if current_user.is_anonymous %}
                     <a class="btn btn-dark" href="{{ url_for('index.signup') }}">Signup</a>
                     {% else %}
-                    <a class="btn btn-dark" href="{{ url_for('index.logout') }}">Logout</a>
+                    <a class="btn btn-light" data-toggle="modal" data-target="#logoutModal">Logout</a>
                     {% endif %}
 
                 </li>
@@ -67,6 +67,25 @@
     {% endwith %}
 
     {% block content %}{% endblock %}
+
+    <div class="modal fade" id="logoutModal" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Logout?</h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <p>Are you sure you want to log-out?</p>
+                </div>
+                <div class="modal-footer">
+                    <!--<button type="button"  data-dismiss="modal">-->
+                    <a class="btn btn-primary" href="{{ url_for('index.logout') }}">Logout</a>
+                    <!--</button>-->
+                </div>
+            </div>
+        </div>
+    </div>
 
 </div>
 <!-- /.container -->
