1)waste edit added 2)button color and size changed

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -171,6 +171,10 @@
     color: red;
 }
 
-.dashboard{
+.dashboard {
     min-height: 800px;
+}
+
+.btn-orange {
+    background-color: #d74933 !important;
 }
