--- a/templates/edit_profile.html
+++ b/templates/edit_profile.html
@@ -39,7 +39,12 @@
                 {{ form.contact_person(class_="form-control") }}
             </div>
 
-            <input type="submit" id="btn-login" class="btn btn-custom btn-lg btn-block" value="Update">
+            <div class="row">
+                <div class="col-lg-4">
+                    <input type="submit" id="btn-login" class="btn btn-custom btn-lg btn-block btn-orange" value="Update">
+                </div>
+                <div class="col-lg-8"></div>
+            </div>
         </form>
 
     </div>
