--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
                     <label for="password" class="sr-only">Password</label>
                     {{ form.password(class_="form-control") }}
                 </div>
-                <input type="submit" id="btn-login" class="btn btn-custom btn-lg btn-block" value="Log in">
+                <input type="submit" id="btn-login" class="btn btn-custom btn-lg btn-block btn-orange" value="Log in">
             </form>
             <a href="javascript:;" class="forget" data-toggle="modal" data-target="#forget-modal">Forgot your
                 password?</a>
