--- a/templates/layout.html
+++ b/templates/layout.html
@@ -32,11 +32,16 @@
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
+
+                {% if current_user.is_authenticated %}
                 <li class="nav-item active">
-                    {% if current_user.is_authenticated %}
-                    <a class="nav-link" href="{{ url_for('index.edit_profile') }}">Edit Profile</a>
-                    {% endif %}
+                    <a class="nav-link" href="{{ url_for('index.edit_profile') }}">Update Profile</a>
                 </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="{{ url_for('index.edit_waste') }}">Update Waste</a>
+                </li>
+                {% endif %}
+
 
                 <li class="nav-item">
                     {% if current_user.is_anonymous %}
@@ -80,7 +85,7 @@
                 </div>
                 <div class="modal-footer">
                     <!--<button type="button"  data-dismiss="modal">-->
-                    <a class="btn btn-primary" href="{{ url_for('index.logout') }}">Logout</a>
+                    <a class="btn btn-primary btn-orange" href="{{ url_for('index.logout') }}">Logout</a>
                     <!--</button>-->
                 </div>
             </div>
