--- a/recyclebin/templates/layout.html
+++ b/recyclebin/templates/layout.html
@@ -6,11 +6,11 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/recyclebin/static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-    <link href="/recyclebin/static/css/portfolio-item.css" rel="stylesheet">
-    <link href="/recyclebin/static/css/multi-select.css" rel="stylesheet">
-    <link rel="stylesheet" href="/recyclebin/static/css/index.css">
+    <link href="/static/css/portfolio-item.css" rel="stylesheet">
+    <link href="/static/css/multi-select.css" rel="stylesheet">
+    <link rel="stylesheet" href="/static/css/index.css">
 
     <title>{% block title %}{% endblock %}Recycle - Efficient waste management</title>
     {% endblock %}
