--- a/recyclebin/templates/edit_waste.html
+++ b/recyclebin/templates/edit_waste.html
@@ -14,20 +14,22 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="form-group">
-                        <label for="email">Waste Generated</label>
+                        <label for="email">Materials Generated</label>
                         {{ form.waste_generated(class_="form-control", id="wasteGeneratedMultiSelect") }}
                         {{ form.waste_generated_list(class_="form-control", id="wasteGeneratedList") }}
                     </div>
                 </div>
                 <div class="col-lg-6">
                     <div class="form-group">
-                        <label for="name">Waste Required</label>
+                        <label for="name">Materials Required</label>
                         {{ form.waste_required(class_="form-control", id="wasteRequiredMultiSelect") }}
                         {{ form.waste_required_list(class_="form-control", id="wasteRequiredList") }}
                     </div>
                 </div>
             </div>
             <br>
+            <br>
+<br>
             <div class="row">
                 <div class="col-lg-4">
                     <input type="submit" id="btn-login" class="btn btn-custom btn-lg btn-block btn-orange" value="Update">
@@ -37,6 +39,7 @@
         </form>
 
     </div>
+
 </div>
 
 
