--- a/recyclebin/templates/index.html
+++ b/recyclebin/templates/index.html
@@ -2,8 +2,8 @@
 {% block content %}
 
 <!-- Portfolio Item Heading -->
-<h1 class="my-4">Recycle -
-    <small>efficient management of waste resources</small>
+<h1 class="my-4">Recycle Bin-
+    <small>Recycle and minimize industrial effluents</small>
 </h1>
 
 <!-- Portfolio Item Row -->
@@ -15,10 +15,9 @@
 
     <div class="col-md-4">
         <h3 class="my-3">Vision</h3>
-        <p>We aim to link the waste output of industries and their inputs, so that waste
-            resources of one industry can be used as input to another.
+        <p>Facilitate exchange of industrial by-products to minimize waste discharge into the environment.
             <br>
-            This would lead to less wastage of resources
+            Go green through the route of Reduce, Reuse and Recycle.
         </p>
 
         <div class="form-wrap border login-form rounded">
@@ -55,11 +54,11 @@
         </div>
         <div class="stepwizard-step">
             <button type="button" class="btn btn-primary btn-circle" disabled="disabled">2</button>
-            <p>Enter waste produced and input material needed</p>
+            <p>Specify industrial requirements and by-products</p>
         </div>
         <div class="stepwizard-step">
             <button type="button" class="btn btn-success btn-circle" disabled="disabled">3</button>
-            <p>Match with similar industries</p>
+            <p>View organizations for exchange of by-products</p>
         </div>
     </div>
 </div>
@@ -68,28 +67,27 @@
 <!-- Related Projects Row -->
 <br><br>
 <div class="row">
-    <div class="col-lg-6">
-        <h3 class="my-4">Already <span class="num_companies">X</span> industries signed up!</h3>
-
-        <img class="img-fluid" src="/static/img/tree.png" alt="" style="height: 100px;">
-
-        <p>
-            <span class="num_companies">X</span> industries have already started using the platform to recycle and manage waste resources.
-        </p>
-
-
-        <h4>
-            We can save the environment together!
-        </h4>
+    <div class="col-lg-5">
+        <h3 class="my-4"><span class="num_companies">X</span> industries signed up!</h3>
+        <div class="row">
+            <div class="col-lg-3">
+                <img class="img-fluid" src="/static/img/tree.png" alt="" style="height: 100px;">
+            </div>
+            <div class="col-lg-9">
+                <h4>
+                    We can save the environment together!
+                </h4>
+            </div>
+        </div>
 
     </div>
     <div class="col-lg-1"></div>
-    <div class="col-lg-5">
-        <h3>Top recycle materials in the system</h3>
+    <div class="col-lg-6">
+        <h3>Industrial by-products in the system</h3>
         <table class="table table-hover">
             <thead>
               <tr>
-                <th>Waste</th>
+                <th>Name</th>
                 <th>Units available</th>
               </tr>
             </thead>
