--- a/recyclebin/templates/edit_profile.html
+++ b/recyclebin/templates/edit_profile.html
@@ -15,7 +15,7 @@
             </div>
 
              <div class="form-group">
-                <label for="name">Name</label>
+                <label for="name">Organization Name</label>
                 {{ form.name(class_="form-control") }}
             </div>
             <div class="form-group">
