--- a/recyclebin/templates/layout.html
+++ b/recyclebin/templates/layout.html
@@ -12,7 +12,7 @@
     <link href="/static/css/multi-select.css" rel="stylesheet">
     <link rel="stylesheet" href="/static/css/index.css">
 
-    <title>{% block title %}{% endblock %}Recycle - Efficient waste management</title>
+    <title>{% block title %}{% endblock %}Recycle - Efficient industrial by-product management</title>
     {% endblock %}
 
 </head>
@@ -20,7 +20,7 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-        <a class="navbar-brand" href="/">Recycle</a>
+        <a class="navbar-brand" href="/">Recycle Bin</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -38,7 +38,7 @@
                     <a class="nav-link" href="{{ url_for('index.edit_profile') }}">Update Profile</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="{{ url_for('index.edit_waste') }}">Update Waste</a>
+                    <a class="nav-link" href="{{ url_for('index.edit_waste') }}">Update Materials</a>
                 </li>
                 {% endif %}
 
