removed waste text from dashboard

--- a/recyclebin/templates/dashboard.html
+++ b/recyclebin/templates/dashboard.html
@@ -51,7 +51,7 @@
                         {% endfor %}
                     {% else %}
                         <li class="list-group-item">
-                            Sorry, looks like we don't have any matching waste industries
+                            Sorry, looks like we don't have any matching industries
                         </li>
                     {% endif %}
 
@@ -100,7 +100,7 @@
                         {% endfor %}
                     {% else %}
                         <li class="list-group-item">
-                            Sorry, looks like we don't have any matching waste industries
+                            Sorry, looks like we don't have any matching industries
                         </li>
                     {% endif %}
 
