--- a/recyclebin/templates/edit_waste.html
+++ b/recyclebin/templates/edit_waste.html
@@ -5,8 +5,7 @@
 <div class="dashboard">
     <br>
     <div class="form-wrap border login-form rounded">
-        <h4>Update Waste</h4>
-        <br>
+        <h4>Update Inventory</h4>
         <br>
         <form role="form" action="{{ url_for('.edit_waste') }}" method="post" id="waste-form" autocomplete="off">
             {{ form.csrf_token }}
@@ -31,7 +30,7 @@
             <br>
 <br>
             <div class="row">
-                <div class="col-lg-4">
+                <div class="col-lg-3">
                     <input type="submit" id="btn-login" class="btn btn-custom btn-lg btn-block btn-orange" value="Update">
                 </div>
                 <div class="col-lg-8"></div>
