--- a/recyclebin/templates/index.html
+++ b/recyclebin/templates/index.html
@@ -83,12 +83,12 @@
     </div>
     <div class="col-lg-1"></div>
     <div class="col-lg-6">
-        <h3>Industrial by-products in the system</h3>
+        <h3>Industrial by-products</h3>
         <table class="table table-hover">
             <thead>
               <tr>
                 <th>Name</th>
-                <th>Units available</th>
+                <th></th>
               </tr>
             </thead>
             <tbody class="waste-table">
