--- a/recyclebin/templates/index.html
+++ b/recyclebin/templates/index.html
@@ -3,7 +3,7 @@
 
 <!-- Portfolio Item Heading -->
 <h1 class="my-4">Recycle Bin-
-    <small>Recycle and minimize industrial effluents</small>
+    <small>Profit from your Industrial Waste</small>
 </h1>
 
 <!-- Portfolio Item Row -->
@@ -15,9 +15,9 @@
 
     <div class="col-md-4">
         <h3 class="my-3">Vision</h3>
-        <p>Facilitate exchange of industrial by-products to minimize waste discharge into the environment.
+        <p>Sell your industrial waste and buy from others too!
             <br>
-            Go green through the route of Reduce, Reuse and Recycle.
+            Go green and grow your business!
         </p>
 
         <div class="form-wrap border login-form rounded">
