--- a/recyclebin/static/css/index.css
+++ b/recyclebin/static/css/index.css
@@ -1,5 +1,5 @@
 .bg-dark {
-    background-color: #d74933 !important;
+    background-color: #4169e1 !important;
 }
 
 /*    --------------------------------------------------
@@ -176,11 +176,11 @@
 }
 
 .btn-orange {
-    background-color: #d74933 !important;
+    background-color: #4169e1 !important;
 }
 
 .orange-list {
-    background-color: #d74933 !important;
+    background-color: #4169e1 !important;
     color: white;
 }
 .waste_org_item {
