--- a/recyclebin/templates/layout.html
+++ b/recyclebin/templates/layout.html
@@ -45,7 +45,7 @@
 
                 <li class="nav-item">
                     {% if current_user.is_anonymous %}
-                    <a class="btn btn-dark" href="{{ url_for('index.signup') }}">Signup</a>
+                    <a class="btn btn-light" href="{{ url_for('index.signup') }}">Signup</a>
                     {% else %}
                     <a class="btn btn-light" data-toggle="modal" data-target="#logoutModal">Logout</a>
                     {% endif %}
