--- a/recyclebin/templates/index.html
+++ b/recyclebin/templates/index.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <!-- Portfolio Item Heading -->
-<h1 class="my-4">Recycle Bin-
+<h1 class="my-4">
     <small>Profit from your Industrial Waste</small>
 </h1>
 
