--- a/recyclebin/templates/index.html
+++ b/recyclebin/templates/index.html
@@ -66,12 +66,12 @@
 <!-- Related Projects Row -->
 <br><br>
 <div class="row">
-    <div class="col-lg-5">
-        <h3 class="my-4"><span class="num_companies">X</span> industries signed up!</h3>
+<!--    <div class="col-lg-5">
+        <h3 class="my-4"><span class="num_companies"></span> industries signed up!</h3>
     </div>
-    <div class="col-lg-1"></div>
+-->    <div class="col-lg-1"></div>
     <div class="col-lg-6">
-        <h3>Industrial by-products</h3>
+        <h3>Top by-products in Inventory</h3>
         <table class="table table-hover">
             <thead>
               <tr>
@@ -208,7 +208,7 @@
 
         $.get('/stats', function (data, status) {
             var html = "";
-            $(".num_companies").html(data.orgs);
+            //$(".num_companies").html(data.orgs);
             data.waste_details.forEach(function(a, i){
                 if (i < 5) {
                     var item = a[0];
