--- a/recyclebin/templates/index.html
+++ b/recyclebin/templates/index.html
@@ -15,9 +15,15 @@
 
     <div class="col-md-4">
         <h3 class="my-3">Vision</h3>
-        <p>Sell your industrial waste and buy from others too!
+        <p>Sell and acquire industrial waste!
             <br>
         </p>
+
+        <div class="form-wrap border login-form rounded">
+		<button type="button" class="btn btn-primary">Join Now!</button>
+	</div>
+
+	<br/>
 
         <div class="form-wrap border login-form rounded">
             <h4>Log in</h4>
