--- a/recyclebin/templates/index.html
+++ b/recyclebin/templates/index.html
@@ -19,8 +19,8 @@
             <br>
         </p>
 
-        <div class="form-wrap border login-form rounded">
-		<button type="button" class="btn btn-primary">Join Now!</button>
+        <div class="form-wrap border login-form rounded" align="center">
+		<button type="button" class="btn btn-primary btn-lg">Join Now!</button>
 	</div>
 
 	<br/>
