--- a/recyclebin/templates/index.html
+++ b/recyclebin/templates/index.html
@@ -20,7 +20,7 @@
         </p>
 
         <div class="form-wrap border login-form rounded" align="center">
-		<a class="btn btn-primary btn-lg">Join Now!</a>
+		<a href="/signup" class="btn btn-primary btn-lg">Join Now!</a>
 	</div>
 
 	<br/>
