--- a/recyclebin/templates/index.html
+++ b/recyclebin/templates/index.html
@@ -21,8 +21,9 @@
 
         <div class="form-wrap border login-form rounded" align="center">
 		<a href="/signup" class="btn btn-primary btn-lg">Join Now!</a>
-		<br>OR
-		<br>
+		<br/><br/><strong>OR</strong>
+		<br/>
+		<br/>
 
             <form role="form" action="/" method="post" id="login-form" autocomplete="off">
                 {{ form.csrf_token }}
