--- a/recyclebin/templates/layout.html
+++ b/recyclebin/templates/layout.html
@@ -12,7 +12,7 @@
     <link href="/static/css/multi-select.css" rel="stylesheet">
     <link rel="stylesheet" href="/static/css/index.css">
 
-    <title>{% block title %}{% endblock %}Recycle - Efficient industrial by-product management</title>
+    <title>{% block title %}{% endblock %}Recycle - Efficient industrial waste recycling</title>
     {% endblock %}
 
 </head>
@@ -38,7 +38,7 @@
                     <a class="nav-link" href="{{ url_for('index.edit_profile') }}">Update Profile</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="{{ url_for('index.edit_waste') }}">Update Materials</a>
+                    <a class="nav-link" href="{{ url_for('index.edit_waste') }}">Update Inventory</a>
                 </li>
                 {% endif %}
 
