--- a/recyclebin/templates/layout.html
+++ b/recyclebin/templates/layout.html
@@ -35,10 +35,10 @@
 
                 {% if current_user.is_authenticated %}
                 <li class="nav-item active">
-                    <a class="nav-link" href="{{ url_for('index.edit_profile') }}">Update Profile</a>
+                    <a class="nav-link" href="{{ url_for('index.edit_profile') }}">Profile</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="{{ url_for('index.edit_waste') }}">Update Inventory</a>
+                    <a class="nav-link" href="{{ url_for('index.edit_waste') }}">Inventory</a>
                 </li>
                 {% endif %}
 
