--- a/recyclebin/templates/index.html
+++ b/recyclebin/templates/index.html
@@ -3,7 +3,7 @@
 
 <!-- Portfolio Item Heading -->
 <h1 class="my-4">
-    <small>Profit from your Industrial Waste</small>
+    <small>Profit from your Industrial Waste and save disposal costs!</small>
 </h1>
 
 <!-- Portfolio Item Row -->
